# free_models

./: pyproject.toml  requirements.txt
.github/workflows/: fetch_models.yml
docs/: index.html  styles.css
scripts/: fetch_models.py
