[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "free_models"
version = "0.1.0"
description = "Static site generator for OpenRouter zero-cost models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "openai>=1.0.0",
  "requests>=2.30.0",
]
